build_log.txt
Configuration on demand is an incubating feature.

> Configure project :app
WARNING: The option setting 'android.defaults.buildfeatures.buildconfig=true' is deprecated.
The current default is 'false'.
It will be removed in version 9.0 of the Android Gradle plugin.
You can resolve this warning in Android Studio via `Refactor` > `Migrate BuildConfig to Gradle Build Files`

> Task :app:preBuild UP-TO-DATE
> Task :app:preReleaseBuild UP-TO-DATE
> Task :app:mergeReleaseJniLibFolders UP-TO-DATE
> Task :app:mergeReleaseNativeLibs NO-SOURCE
> Task :app:stripReleaseDebugSymbols NO-SOURCE
> Task :app:extractReleaseNativeSymbolTables NO-SOURCE
> Task :app:mergeReleaseNativeDebugMetadata NO-SOURCE
> Task :app:checkReleaseDuplicateClasses UP-TO-DATE
> Task :app:mergeReleaseArtProfile UP-TO-DATE
> Task :app:buildKotlinToolingMetadata UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors
> Task :app:dataBindingMergeDependencyArtifactsRelease UP-TO-DATE
> Task :app:generateReleaseResValues UP-TO-DATE
> Task :app:generateReleaseResources UP-TO-DATE
> Task :app:mergeReleaseResources UP-TO-DATE
> Task :app:packageReleaseResources UP-TO-DATE
> Task :app:parseReleaseLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesRelease UP-TO-DATE
> Task :app:dataBindingTriggerRelease UP-TO-DATE
> Task :app:generateReleaseBuildConfig UP-TO-DATE
> Task :app:generateSafeArgsRelease UP-TO-DATE
> Task :app:checkReleaseAarMetadata UP-TO-DATE
> Task :app:mapReleaseSourceSetPaths UP-TO-DATE
> Task :app:createReleaseCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksRelease UP-TO-DATE
> Task :app:processReleaseMainManifest UP-TO-DATE
> Task :app:processReleaseManifest UP-TO-DATE
> Task :app:processReleaseManifestForPackage UP-TO-DATE
> Task :app:processReleaseResources UP-TO-DATE
> Task :app:kaptGenerateStubsReleaseKotlin UP-TO-DATE
> Task :app:kaptReleaseKotlin UP-TO-DATE
> Task :app:compileReleaseKotlin UP-TO-DATE
> Task :app:javaPreCompileRelease UP-TO-DATE

> Task :app:compileReleaseJavaWithJavac
C:\BulkSMS2\app\src\main\java\com\bulksms\smsmanager\databinding\FragmentSmsCampaignBindingManual.java:80: error: cannot find symbol
        NestedScrollView nestedScrollView = root.findViewById(com.bulksms.smsmanager.R.id.nestedScrollView);
                                                                                         ^
  symbol:   variable nestedScrollView
  location: class id
C:\BulkSMS2\app\src\main\java\com\bulksms\smsmanager\databinding\FragmentSmsCampaignBindingManual.java:87: error: cannot find symbol
        TextInputLayout inputTemplateLayout = root.findViewById(com.bulksms.smsmanager.R.id.inputTemplateLayout);
                                                                                           ^
  symbol:   variable inputTemplateLayout
  location: class id
C:\BulkSMS2\app\src\main\java\com\bulksms\smsmanager\databinding\FragmentSmsCampaignBindingManual.java:92: error: cannot find symbol
        RadioGroup radioGroupSim = root.findViewById(com.bulksms.smsmanager.R.id.radioGroupSim);
                                                                                ^
  symbol:   variable radioGroupSim
  location: class id
C:\BulkSMS2\app\src\main\java\com\bulksms\smsmanager\ui\inbox\SimpleInboxViewModel.java:136: error: incompatible types: Class<CAP#1> cannot be converted to LiveData<PagingData<SmsEntity>>
            .getClass(); // Placeholder - use LiveDataTransformations instead
                     ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Flow from capture of ? extends Flow
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

> Task :app:compileReleaseJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 17s
27 actionable tasks: 2 executed, 25 up-to-date
